# debug-statsig-client-init

./: .env.example  .gitignore  LICENSE  README.md  justfile
cluster/: services.yaml
cluster/binary/debug/: Dockerfile  config.yaml
iac/: Tiltfile  utils.tilt
iac/config/local/: cluster-config.yaml
iac/config/local/cluster-helm/: cilium-values.yaml
iac/config/local/cluster-yaml/: allow-egress.yaml  coredns.yaml  namespaces.yaml
iac/steps/: after-network.tilt  cluster.tilt  helm-repos.tilt  network.tilt  services.tilt
python/: docker-compose.yml  pyproject.toml
